testsuite/poke.pkl/sl-diag-5.pk
/* { dg-do compile } */

var a = [1,2,3] <<. 20; /* { dg-error "invalid operand.*\n.*expected integral or offset" } */
